css/map_explorer.css
/*map explorer*/
.page-template-page-map-explorer .interactive-map{
  border: 0;
  box-shadow: none;
  position: relative;
  top: 60px;
  /*margin-top: 60px;*/
  /*overflow: hidden;*/
  /*height: 100%;
  -webkit-box-sizing:border-box;*/
  /*overflow-y: hidden;*/

}
.page-template-page-map-explorer .interactive-map-layers {
    bottom: 0;
    position: fixed;
    z-index: 100;
    background: white;
    width: 100%;
  }
.page-template-page-map-explorer #main-breadcrumb{
  display: none;
}

.page-template-page-map-explorer .interactive-map .map-container {
    width: auto;
    height: auto;
    float: none;
    overflow: hidden;
    position: fixed;
    bottom: 0;
    left: 110px;
    right: 0;
    top: 140px;

  }

  .page-template-page-map-explorer .interactive-map .fullscreen-map, .page-template-page-map-explorer .fullscreen-map.map-container {
    bottom: 0;
    height: auto !important;
    left: 0;
    position: fixed !important;
    right: 0;
    top: 0;
    width: auto !important;
    z-index: 9999999;
  }
    .page-template-page-map-explorer .interactive-map .map-container .leaflet-left{
      left: 20px;
    }

.page-template-page-map-explorer .interactive-map-layers .categories{
  width: 100%;

}
  .page-template-page-map-explorer li.cat-item {
      float: left;
      margin: 0 10px;
      font-size: 12px;
      text-align: center;
      text-transform: uppercase;
      /*font-weight: bold;*/
      position: relative;
      bottom:7px;

  }
  .page-template-page-map-explorer li.cat-item:hover  ul.cat-layers{
    display: block!important;
  }
    .page-template-page-map-explorer .category-color{
        display: block;
        width: 210px;
        background: red;
        position: relative;
        bottom:11px;
    }
    /*layer category colors*/
      .cat-energy .category-color{ background: rgb(124,212,55);}
      .cat-map-environment-and-natural-resources .category-color{background: rgb(243,165,48);}
      .cat-land .category-color {background: rgb(81,144,224);}
      .cat-infrastructure .category-color {background: rgb(223,0,100);}


.page-template-page-map-explorer .cat-layers{
  width: 200px;
  display: block;
  position: absolute;
  bottom: 42px;
  background: white;
  margin-left: 0;
  padding-left: 0;
  padding-right: 10px;
}

  .page-template-page-map-explorer .cat-item{
    padding: 0 5px;
    /*padding-top: 0;*/
  }

    .page-template-page-map-explorer .cat-item a{color:black;}
  .page-template-page-map-explorer .layer-item{
    padding-left:0;
    margin-left: 10px;
    text-align: left;
    max-width: 180px;
    line-height: 14px;
  }
  .layer-item h2 {
    left: 20px;
    position: relative;
  }
.page-template-page-map-explorer .cat-layers .layer-excerpt,.page-template-page-map-explorer .cat-layers .layer-content,.page-template-page-map-explorer .cat-layers .layer-item .toggles{
  display: none;
}

map explorer*/

.page-template-page-map-explorer .interactive-map{
  border: 0;
  box-shadow: none;
  /*overflow-y: hidden;*/

}
.page-template-page-map-explorer .interactive-map-layers {
    bottom: 0;
    position: fixed;
    z-index: 100;
    background: white;
    width: 100%;
  }
.page-template-page-map-explorer #main-breadcrumb{
  display: none;
}

.page-template-page-map-explorer .interactive-map .map-container {
    width: 100%;
    height: 100%;
    float: none;
  }

.page-template-page-map-explorer .interactive-map-layers .categories{
  width: 100%;

}
  .page-template-page-map-explorer li.cat-item {
      float: left;
      margin: 0 10px;
      font-size: 12px;
      text-align: center;
      text-transform: uppercase;
      /*font-weight: bold;*/
      position: relative;
      bottom:7px;

  }
  .page-template-page-map-explorer li.cat-item:hover  ul.cat-layers{
    display: block!important;
  }
    .page-template-page-map-explorer .category-color{
        display: block;
        width: 210px;
        background: red;
        position: relative;
        bottom:11px;
    }
    /*layer category colors*/
      .cat-energy .category-color{ background: rgb(124,212,55);}
      .cat-map-environment-and-natural-resources .category-color{background: rgb(243,165,48);}
      .cat-land .category-color {background: rgb(81,144,224);}
      .cat-infrastructure .category-color {background: rgb(223,0,100);}


.page-template-page-map-explorer .cat-layers{
  width: 200px;
  display: block;
  position: absolute;
  bottom: 42px;
  background: white;
  margin-left: 0;
  padding-left: 0;
  padding-right: 10px;
}

  .page-template-page-map-explorer .cat-item{
    padding: 0 5px;
    /*padding-top: 0;*/
  }

    .page-template-page-map-explorer .cat-item a{color:black;}
  .page-template-page-map-explorer .layer-item{
    padding-left:0;
    margin-left: 10px;
    text-align: left;
    max-width: 180px;
    line-height: 14px;
  }
  .layer-item h2 {
    left: 20px;
    position: relative;
  }
    .layer-item .layer-status{
      left: 5px;
     padding-bottom: 0;
     padding-right: 0;
      position: relative;
      top: 10px;
    }
  .page-template-page-map-explorer .cat-layers .layer-excerpt,.page-template-page-map-explorer .cat-layers .layer-content,.page-template-page-map-explorer .cat-layers .layer-item .toggles{
    display: none;

  }
  .map-active-layers {
      position: absolute;
      right: 120px;
      top: 100px;
      z-index: 200;

    }

      .page-template-page-map-explorer .fullscreen-map.map-container .map-active-layers{
        right:20px;
      }
    .map-active-layers .active-layer{display: none;}
      .map-active-layers .active-layer.active{
        display: block;
         min-height: 90px;
         min-width: 220px;
         margin-bottom: 10px;
         background: white;

      }
        .map-active-layers .active-layer.active h6{
          padding: 10px 5px;
          padding-left: 20px;
          color: white;
          text-transform: uppercase;
          background: red;
          text-align: left;
        }
        .map-active-layers .active-layer.layer-energy h6{ background: rgb(124,212,55);}
        .map-active-layers .active-layer.layer-map-environment-and-natural-resources h6{background: rgb(243,165,48);}
        .map-active-layers .active-layer.layer-land h6 {background: rgb(81,144,224);}
        .map-active-layers .active-layer.layer-infrastructure h6 {background: rgb(223,0,100);}

        .map-active-layers .active-layer .layer-item{
          display: block;
        }
        .map-active-layers .active-layer .layer-item .toggles, .map-active-layers .active-layer .layer-item .legend, .map-active-layers .active-layer .layer-item .layer-excerpt, .map-active-layers .active-layer .layer-item .layer-content{
          display: none;
        }
    .page-template-page-map-explorer footer{display: none;}

